package controller;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class newRestController
{

}
