@startuml

title __PROGETTO's Class Diagram__\n

    class MavenWrapperDownloader {
    }

  


    namespace om.example.progetto {
      class com.example.progetto.csvClasses.dataType.Metadata {
      }
    }

    namespace om.example.progetto {
      class com.example.progetto.ProgettoApplication {
      }
    }

    namespace ontroller {
      class controller.DataServices {
      }
    }

    namespace ontroller {
      class controller.newRestController {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.csvRetrieve.CsvSplitter {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.csvRetrieve.CsvValidator {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.DataCsv {
      }
    }

    namespace svClasses {
      class com.example.progetto.Spring.DataCsvRow {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.csvRetrieve.GetCsvUrlFromJsonUrl {
      }
    }

    namespace svClasses {
      class com.example.progetto.csvClasses.csvRetrieve.ReadLineFromBufferedReader {
      }
    }

    namespace svClasses {
      namespace dataType {
        class com.example.progetto.csvClasses.dataType.FloatArray {
        }
      }
    }

    namespace svClasses {
      namespace dataType {
        class com.example.progetto.csvClasses.dataType.PrintClass {
        }
      }
    }

    namespace svClasses {
      namespace dataType {
        class com.example.progetto.csvClasses.dataType.StringArray {
        }
      }
    }

  

  com.example.progetto.csvClasses.csvRetrieve.CsvSplitter o-- com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl : csv
  com.example.progetto.csvClasses.csvRetrieve.GetCsvDataFromUrl o-- com.example.progetto.csvClasses.csvRetrieve.ReadLineFromBufferedReader : br


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
